Fix alignments (#42)
* fix alignments and spacing

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -161,3 +161,18 @@ h2 {
 .ab-top-section {
   padding-top: 40px;
 }
+
+.ab-mid-section {
+  padding: 30px 0;
+}
+
+.ab-bottom-section {
+  padding-bottom: 30px;
+}
+
+.ab-top-section,
+.ab-mid-section,
+.ab-bottom-section {
+  width: 100%;
+  height: auto;
+}
